--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- adding the top bar with contact information and other options. -->
             <div class="topbar">
                 <a class="whenactive" href="#home">Home</a>
-                <a href="#resume">Resumes</a>
+                <a href="#resume" onclick="goToResumePage()">Resumes</a>
                 <a href="#references">References</a>
                 <a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"><i class="fa fa-linkedin-square"></i></a>
@@ -95,6 +95,12 @@
      scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
      salutatus pri, et his ornatus tincidunt.
 </p>
+ 
+ <script> 
+  let goToResumePage = function(event) {
+   window.location.href = "resume.html";
+  }
+ </script> 
 
 </body>
 </html>
