--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#resume" onclick="goToResumePage()" id="resume">Resumes</a>
                 <a href="#references" onclick="currentReferences()"id="references">References</a>
                 <a href="#" id="instagram" title="follow me @Meixia_Sindelar!" onclick="instgramPage()"><i class="fa fa-instagram"></i></a>
-                <a href="#" id="linkedin" title="check out my LinkedIn profile!" onclick="linkedinPage()"><i class="fa fa-linkedin-square"></i></a>
+                <a href="#" id="linkedin" title="check out my LinkedIn profile!" onclick="window.location=https://www.linkedin.com/in/meixia-sindelar/"><i class="fa fa-linkedin-square"></i></a>
                 <a href="#" id="email"><i class="fa fa-envelope"></i></a>
                 <a href="#" id="number"><i class="fa fa-phone"></i></a>
             </div>  
@@ -100,10 +100,6 @@
   <!-- function that takes the user to the "Resume" page when toolbar resume option is clicked. -->
   let goToResumePage = function(event) {
    window.location.href = "resume.html";
-  }
-  
-   let instagramPage = function(event) {
-   window.location.href = "https://www.linkedin.com/in/meixia-sindelar/";
   }
  
  </script> 
