--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a class="whenactive" href="#home">Home</a>
                 <a href="#resume" onclick="goToResumePage()" id="resume">Resumes</a>
                 <a href="#references" onclick="currentReferences()"id="references">References</a>
-                <a href="#" id="instagram" title="follow me @Meixia_Sindelar!" onclick="instgramPage()"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/meixia_sindelar/" id="instagram" title="follow me @Meixia_Sindelar!"><i class="fa fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/meixia-sindelar/" id="linkedin" title="check out my LinkedIn profile!"><i class="fa fa-linkedin-square"></i></a>
                 <a href="#" id="email"><i class="fa fa-envelope"></i></a>
                 <a href="#" id="number"><i class="fa fa-phone"></i></a>
