--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <a class="whenactive" href="#home">Home</a>
                 <a href="#resume" onclick="goToResumePage()" id="resume">Resumes</a>
                 <a href="#references" onclick="currentReferences()"id="references">References</a>
-                <a href="https://www.instagram.com/meixia_sindelar/" id="instagram" title="follow me @Meixia_Sindelar!"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/meixia-sindelar/" id="linkedin" title="check out my LinkedIn profile!"><i class="fa fa-linkedin-square"></i></a>
-                <a href="#" id="email"><i class="fa fa-envelope"></i></a>
-                <a href="#" id="number"><i class="fa fa-phone"></i></a>
+                <a href="https://www.instagram.com/meixia_sindelar/" id="instagram" title="follow me @Meixia_Sindelar"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/meixia-sindelar/" id="linkedin" title="check out my LinkedIn profile"><i class="fa fa-linkedin-square"></i></a>
+                <a href="mailto:meixia2001@gmail.com" id="email" title="Click to send me an email"><i class="fa fa-envelope"></i></a>
+                <a href="tel:*6304600067" id="number" title="click to contact me"><i class="fa fa-phone"></i></a>
             </div>  
         </div>
         <img src="images/White-Mt.jpg" alt="white snowy mt" />
