--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- adding the top bar with contact information and other options. -->
             <div class="topbar">
                 <a class="whenactive" href="#home">Home</a>
-                <a href="#resume" onclick="goToResumePage()" id="resume">Resumes</a>
+                <a href="resume.html" id="resume">Resumes</a>
                 <a href="#references" onclick="currentReferences()"id="references">References</a>
                 <a href="https://www.instagram.com/meixia_sindelar/" id="instagram" title="follow me @Meixia_Sindelar"><i class="fa fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/meixia-sindelar/" id="linkedin" title="check out my LinkedIn profile"><i class="fa fa-linkedin-square"></i></a>
@@ -95,14 +95,6 @@
      scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
      salutatus pri, et his ornatus tincidunt.
 </p>
- 
- <script> 
-  <!-- function that takes the user to the "Resume" page when toolbar resume option is clicked. -->
-  let goToResumePage = function(event) {
-   window.location.href = "resume.html";
-  }
- 
- </script> 
 
 </body>
 </html>
