--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
         <p> Due to the fact I am a dual major student, I take both CS and business cources.
             Therefore, I have two resumes to better disply my skills and knowledge. 
         </p>
-        <imag scr="images/paper.background.jpg" alt="paper background" />
+        <imag scr="images/paper-background.jpg" alt="paper background" />
             <div class = "resumeImage" > 
             <h3> Computer Science </h3>
             <h3> Business Administration </h3>
