--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,9 @@
 <!-- connecting the css file to the html file -->
 <link rel="stylesheet" href="css/resume.css"> 
 <body> 
-    <div class = "bgImage">
+    <div class= "bgImage">
         <h1> My Resumes </h1>
-        <p> Due to the fact I am a dual major student, I take both CS and business cources.
+        <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
             Therefore, I have two resumes to better disply my skills and knowledge. 
         </p>
         <imag scr="images/paper-background.jpg" alt="paper background" />
