--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="css/resume.css"> 
 <body> 
     <div class= "bgImage">
-        <imag scr="images/paper-background.jpg" alt="paper background" />
+        <img scr="images/paper-background.jpg" alt="paper background" />
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
             Therefore, I have two resumes to better disply my skills and knowledge. 
