--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title> Resume Page </title>
 <!-- connecting the css file to the html file -->
 <link rel="stylesheet" href="css/resume.css"> 
+</head>
 <body> 
     <div class= "bgImage">
         <h1> My Resumes </h1>
@@ -16,5 +18,4 @@
             </div>
     </div>
 </body>
-</head>
 </html>
