--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     
 <body> 
     <div>
-        <img scr="images/paper-background.jpg" alt="paper background" />
+        <img src="images/paper-background.jpg" alt="paper background" />
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
             Therefore, I have two resumes to better disply my skills and knowledge. 
