--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 </head>
     
 <body> 
-    <div>
+    <div class="main_div">
         <img src="images/paper-background.jpg" alt="paper background" />
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
