--- a/resume.html
+++ b/resume.html
@@ -7,18 +7,20 @@
 </head>
     
 <body> 
-    <div class= "main_div">
+    <div>
         <img src="images/paper-background.jpg" alt="paper background" />
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
             Therefore, I have two resumes to better disply my skills and knowledge. 
         </p>
-            <div class= "resumeImage" > 
+     </div>
+    
+     <div class= "resumeImage" > 
             <h3> Computer Science </h3>
                 <img src="images/CS Resume.jpg" />
             <h3> Business Administration </h3>
                 <img src="images/Business Resume.jpg" />
-            </div>
-    </div>
+      </div>
+ 
 </body>
 </html>
