--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 </head>
     
 <body> 
-    <img src="images/paper-background.jpg" alt="paper background" />
+    <img class="background" src="images/paper-background.jpg" alt="paper background" />
     <div>
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
