--- a/resume.html
+++ b/resume.html
@@ -7,17 +7,17 @@
 </head>
     
 <body> 
-    <img class="background" src="images/paper-background.jpg" alt="paper background" />
+    <!-- <img class="background" src="images/paper-background.jpg" alt="paper background" /> -->
     <div>
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
             Therefore, I have two resumes to better disply my skills and knowledge. 
         </p>
-        <div class= "resumeImage" > 
+        <div class= "resumePart"> 
             <h3> Computer Science </h3>
-                <img src="images/CS Resume.jpg" />
+                <img class= "resumeImages" src="images/CS Resume.jpg" />
             <h3> Business Administration </h3>
-                <img src="images/Business Resume.jpg" />
+                <img class= "resumeImages" src="images/Business Resume.jpg" />
         </div>
       </div>
 </body>
