--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,6 @@
 </head>
     
 <body> 
-    <!-- <img class="background" src="images/paper-background.jpg" alt="paper background" /> -->
     <div>
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
@@ -15,9 +14,9 @@
         </p>
         <div class= "resumePart"> 
             <h3> Computer Science </h3>
-                <img class= "resumeImages" src="images/CS Resume.jpg" />
+                <img class= "resumeImage1" src="images/CS Resume.jpg" />
             <h3> Business Administration </h3>
-                <img class= "resumeImages" src="images/Business Resume.jpg" />
+                <img class= "resumeImage2" src="images/Business Resume.jpg" />
         </div>
       </div>
 </body>
