--- a/resume.html
+++ b/resume.html
@@ -12,11 +12,15 @@
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
             Therefore, I have two resumes to better disply my skills and knowledge. 
         </p>
-        <div class= "resumePart"> 
-            <h3> Computer Science </h3>
+        <div class= "row"> 
+            <div class= "column">
+                <h3> Computer Science </h3>
                 <img class= "resumeImage1" src="images/CS Resume.jpg" />
-            <h3> Business Administration </h3>
+            </div>
+            <div class= "column>
+                <h3> Business Administration </h3>
                 <img class= "resumeImage2" src="images/Business Resume.jpg" />
+            </div>
         </div>
       </div>
 </body>
