--- a/resume.html
+++ b/resume.html
@@ -12,16 +12,15 @@
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
             Therefore, I have two resumes to better disply my skills and knowledge. 
         </p>
-        <div class= "row"> 
-            <div class= "column">
-                <h3> Computer Science </h3>
-                <img class= "resumeImage1" src="images/CS Resume.jpg" />
-            </div>
-            <div class= "column>
-                <h3> Business Administration </h3>
-                <img class= "resumeImage2" src="images/Business Resume.jpg" />
-            </div>
-        </div>
+        <table>
+            <tr>
+                <th> Computer Science </th> 
+                <th> Business Administration </th>
+            </tr>
+            <tr>
+                <td> <img class= "resumeImage1" src="images/CS Resume.jpg" /> </td>
+                <td> <img class= "resumeImage2" src="images/Business Resume.jpg" /> </td>
+        </table>
       </div>
 </body>
 </html>
