--- a/resume.html
+++ b/resume.html
@@ -14,8 +14,8 @@
         </p>
         <table>
             <tr>
-                <th> Computer Science </th> 
-                <th> Business Administration </th>
+                <th class= "header1"> Computer Science </th> 
+                <th class= "header2"> Business Administration </th>
             </tr>
             <tr>
                 <td> <img class= "resumeImage1" src="images/CS Resume.jpg" /> </td>
