--- a/resume.html
+++ b/resume.html
@@ -12,6 +12,8 @@
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
             Therefore, I have two resumes to better disply my skills and knowledge. 
         </p>
+        
+        <!-- Setting up the 2x2 table for the resume and their respective titles -->
         <table>
             <tr>
                 <th class= "header1"> Computer Science </th> 
