Added break point

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <body> 
     <div>
         <h1> My Resumes </h1>
-        <p> Due to the fact I am a dual major student, I take both CS and business administration cources.
+        <p> Due to the fact I am a dual major student, I take both CS and business administration cources. <br>
             Therefore, I have two resumes to better disply my skills and knowledge. 
         </p>
         
