--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="navcontainer"> 
             <!-- adding the top bar with contact information and other options. -->
             <div class="topbar">
-                <a class="whenactive" href="#home">Home</a>
-                <a href="resume.html" id="resume">Resumes</a>
-                <a href="#references" onclick="currentReferences()"id="references">References</a>
+                <a href="index.html" class="whenactive">Home</a>
+                <a href="resume.html" class="whenactive" id="resume">Resumes</a>
+                <a href="references.html" class="whenactive" id="references">References</a>
                 <a href="https://www.instagram.com/meixia_sindelar/" id="instagram" title="follow me @Meixia_Sindelar"><i class="fa fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/meixia-sindelar/" id="linkedin" title="check out my LinkedIn profile"><i class="fa fa-linkedin-square"></i></a>
                 <a href="mailto:meixia2001@gmail.com" id="email" title="click to send me an email"><i class="fa fa-envelope"></i></a>
