--- a/references.html
+++ b/references.html
@@ -1,6 +1,9 @@
 <!DOCTYPW html>
 <html>
   <header>
+    <!-- connecting the css file to the html file -->
+    <link rel="stylesheet" href="css/references.css">  
+    
     <title> Reference Page </title>
   </header>
   
