--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navcontainer"> 
             <!-- adding the top bar with contact information and other options. -->
             <div class="topbar">
-                <a href="index.html" class="whenactive">Home</a>
+                <a href="index.html" class="whenactive" id="home">Home</a>
                 <a href="resume.html" class="whenactive" id="resume">Resumes</a>
                 <a href="references.html" class="whenactive" id="references">References</a>
                 <a href="https://www.instagram.com/meixia_sindelar/" id="instagram" title="follow me @Meixia_Sindelar"><i class="fa fa-instagram"></i></a>
