--- a/references.html
+++ b/references.html
@@ -19,6 +19,7 @@
     </div>
     
     <div class= "secondReference">
+    <img src="images/DuPageFoundation_Logo.png" alt="DuPage Foundation" />
     <h4> Name 2 </h4>
       <p>  title, job </p>  
       <p class= "contact"> Contact Information: </p>
@@ -27,6 +28,7 @@
     </div>
     
     <div class= "thirdReference">
+    <img src="images/MAC-Building-Entrance.jpeg" alt="MAC building" />
     <h4> Name 2 </h4>
       <p>  title, job </p>  
       <p class= "contact"> Contact Information: </p>
