--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <div>
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources. <br>
-            Therefore, I have two resumes to better disply my skills and knowledge. 
+            Therefore, I have made two resumes to better display my skills and knowledge. 
         </p>
         
         <!-- Setting up the 2x2 table for the resume and their respective titles -->
