Changing image code

--- a/references.html
+++ b/references.html
@@ -18,8 +18,7 @@
       <p> info <br> </p>
     </div>
     
-    <div class= "secondReference">
-    <img src="images/DuPageFoundation_Logo.png" alt="DuPage Foundation" />
+    <div class= "secondReference" style= "background-image: url(images/DuPageFoundation_Logo.png)">
     <h4> Name 2 </h4>
       <p>  title, job </p>  
       <p class= "contact"> Contact Information: </p>
@@ -27,8 +26,7 @@
       <p> info <br> </p>
     </div>
     
-    <div class= "thirdReference">
-    <img src="images/MAC-Building-Entrance.jpeg" alt="MAC building" />
+    <div class= "thirdReference" style= "background-image: url(images/MAC-Building-Entrance.jpeg)">
     <h4> Name 2 </h4>
       <p>  title, job </p>  
       <p class= "contact"> Contact Information: </p>
