--- a/resume.html
+++ b/resume.html
@@ -6,9 +6,8 @@
 <title> Resume Page </title>
 </head>
     
-<body> 
+<body style="background-image: url(images/paper-background.jpg)"> 
     <div>
-        <img src="images/paper-background.jpg alt="crumpled paper background" />
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources. <br>
             Therefore, I have made two resumes to better display my skills and knowledge. 
