--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 <title> Resume Page </title>
 </head>
     
-<body style="background-image: url(images/crumpled paper.jpeg)"> 
+<body style="background-image: url(images/paper-background.jpg)"> 
     <div>
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources. <br>
