--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,9 @@
 </head>
     
 <body style="background-image: url(images/paper-background.jpg)"> 
+    <?php
+    include "toolbar.html";
+    ?>
     <div>
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both CS and business administration cources. <br>
