--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 <title> Resume Page </title>
 </head>
     
-<body style="background-image: url(images/crumpled paper.jpeg)"> 
+<body style="background-image: url(images/crumpled-paper.jpg)"> 
     <?php
     include "toolbar.html";
     ?>
