--- a/resume.html
+++ b/resume.html
@@ -19,8 +19,8 @@
         <!-- Setting up the 2x2 table for the resume and their respective titles -->
         <table>
             <tr>
-                <th> Computer Science </th> 
-                <th> Business Administration </th>
+                <th class= "header1"> Computer Science </th> 
+                <th class= "header2"> Business Administration </th>
             </tr>
             <tr>
                 <td> <img class= "resumeImage1" src="images/CS Resume.jpg" /> </td>
