--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
     ?>
     <div>
         <h1> My Resumes </h1>
-        <p> Due to the fact I am a dual major student, I take both CS and business administration cources. <br>
+        <p> Due to the fact I am a dual major student, I take both computer science and business administration cources. <br>
             Therefore, I have made two resumes to better display my skills and knowledge. 
         </p>
         
