--- a/references.html
+++ b/references.html
@@ -34,7 +34,7 @@
       <p> info <br> </p>
     </div>
     
-    <div class= "fourthReference">
+    <div class= "fourthReference" style= "background-image: url(images/GlenbardWest.jpg)">
     <h4> Kelly Hass </h4>
       <p>  title, job </p>  
       <p class= "contact"> Contact Information: </p>
