--- a/references.html
+++ b/references.html
@@ -19,7 +19,8 @@
       <p> info <br> </p>
     </div>
     
-    <div class= "secondReference" style= "background-image: url(images/DuPageFoundation_Logo.png)">
+    <div class= "secondReference">
+    <img src= "images/DuPageFoundation_Logo.png" alt"ww" /> 
     <h4> Name 2 </h4>
       <p>  title, job </p>  
       <p class= "contact"> Contact Information: </p>
