--- a/references.html
+++ b/references.html
@@ -19,8 +19,7 @@
       <p> info <br> </p>
     </div>
     
-    <div class= "secondReference">
-    <img src= "images/DuPageFoundation_Logo.png" alt"ww" /> 
+    <div class= "secondReference" style="background-image: url(images/DuPageFoundation_Logo.png)"> 
     <h4> Name 2 </h4>
       <p>  title, job </p>  
       <p class= "contact"> Contact Information: </p>
