Adding lines to the last reference

--- a/references.html
+++ b/references.html
@@ -40,7 +40,7 @@
       <p>  title, job </p>  
       <p class= "contact"> Contact Information: </p>
       <p> (630) 460 - 0067 <br> meixia2001@gmail.com </p> 
-      <p> info <br> </p>
+      <p> info <br> How she impacted me and why I have her as a reference <br> and more here <br> </p>
     </div>
     
   </body>
