--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     
 <body style="background-image: url(images/crumpled-paper.jpg)"> 
     <?php
-    include "header.php";
+    include "header.html";
     ?>
     <div>
         <h1> My Resumes </h1>
