--- a/resume.html
+++ b/resume.html
@@ -7,9 +7,7 @@
 </head>
     
 <body style="background-image: url(images/crumpled-paper.jpg)"> 
-    <?php
-    include "header.html";
-    ?>
+    <?php include "header.php"; ?>
     <div>
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both computer science and business administration cources. <br>
