--- a/references.html
+++ b/references.html
@@ -27,7 +27,7 @@
       <p> info <br> </p>
     </div>
     
-    <div class= "thirdReference" style= "background-image: url(images/MAC-Building-Entrance.jpeg)">
+    <div class= "thirdReference">
     <h4> Name 2 </h4>
       <p>  title, job </p>  
       <p class= "contact"> Contact Information: </p>
