--- a/references.html
+++ b/references.html
@@ -27,6 +27,8 @@
       <p> info <br> </p>
     </div>
     
+    <li class="image-wrapper>
+    <img src="images/MAC-Building-Entrance.jpeg" alt"MAC building" />
     <div class= "thirdReference">
     <h4> Name 2 </h4>
       <p>  title, job </p>  
@@ -34,6 +36,7 @@
       <p> (630) 460 - 0067 <br> meixia2001@gmail.com </p> 
       <p> info <br> </p>
     </div>
+     </li>
     
     <div class= "fourthReference" style= "background-image: url(images/GlenbardWest.jpg)">
     <h4> Kelly Hass </h4>
