--- a/references.html
+++ b/references.html
@@ -28,7 +28,7 @@
     </div>
     
     <li class="image-wrapper>
-    <img src="images/MAC-Building-Entrance.jpeg" alt"MAC building" />
+    <img src="images/MAC-Building-Entrance.jpg" alt"MAC building" />
     <div class= "thirdReference">
     <h4> Name 2 </h4>
       <p>  title, job </p>  
