--- a/references.html
+++ b/references.html
@@ -27,16 +27,15 @@
       <p> info <br> </p>
     </div>
     
-    <li class="image-wrapper>
-    <img src="images/MAC-Building-Entrance.jpg" alt"MAC building" />
     <div class= "thirdReference">
-    <h4> Name 2 </h4>
-      <p>  title, job </p>  
-      <p class= "contact"> Contact Information: </p>
-      <p> (630) 460 - 0067 <br> meixia2001@gmail.com </p> 
-      <p> info <br> </p>
+      <div class= "layer">
+        <h4> Name 2 </h4>
+        <p>  title, job </p>  
+        <p class= "contact"> Contact Information: </p>
+        <p> (630) 460 - 0067 <br> meixia2001@gmail.com </p> 
+        <p> info <br> </p>
+      </div>
     </div>
-     </li>
     
     <div class= "fourthReference" style= "background-image: url(images/GlenbardWest.jpg)">
     <h4> Kelly Hass </h4>
