Making class into id

--- a/references.html
+++ b/references.html
@@ -27,7 +27,7 @@
       <p> info <br> </p>
     </div>
     
-    <div class= "thirdReference">
+    <div id= "thirdReference">
       <div class= "container3">
         <h4> Name 2 </h4>
         <p>  title, job </p>  
@@ -37,7 +37,7 @@
       </div>
     </div>
     
-    <div class= "fourthReference" style= "background-image: url(images/GlenbardWest.jpg)">
+    <div id= "fourthReference" style= "background-image: url(images/GlenbardWest.jpg)">
       <div class= "container4">
         <h4> Kelly Hass </h4>
         <p>  title, job </p>  
