--- a/references.html
+++ b/references.html
@@ -28,6 +28,7 @@
     </div>
     
     <div class= "thirdReference">
+      <img src= "images/MAC-Building-Entrance.jpg" alt="" />
       <div class= "container3">
         <h4> Name 2 </h4>
         <p>  title, job </p>  
