--- a/references.html
+++ b/references.html
@@ -28,7 +28,7 @@
     </div>
     
     <div class= "thirdReference">
-      <img src= "images/MAC-Building-Entrance.jpg" alt="MAC building image" />
+      <img class="imag3" src="images/MAC-Building-Entrance.jpg" alt="MAC building image" />
       <div class= "container3">
         <h4> Name 2 </h4>
         <p>  title, job </p>  
@@ -39,7 +39,7 @@
     </div>
     
     <div class= "fourthReference">
-    <img src= "GlenbardWest.jpg" alt"GW high school image" />
+    <img class="img4" src="GlenbardWest.jpg" alt="GW high school image" />
       <div class= "container4">
         <h4> Kelly Hass </h4>
         <p>  title, job </p>  
