--- a/references.html
+++ b/references.html
@@ -28,7 +28,7 @@
     </div>
     
     <div class= "thirdReference">
-      <img class="imag3" src="images/MAC-Building-Entrance.jpg" alt="MAC building image" />
+      <img class="img3" src="images/MAC-Building-Entrance.jpg" alt="MAC building image" />
       <div class= "container3">
         <h4> Name 2 </h4>
         <p>  title, job </p>  
