One image at a time

--- a/references.html
+++ b/references.html
@@ -39,7 +39,7 @@
     </div>
     
     <div class= "fourthReference">
-    <img class="img4" src="GlenbardWest.jpg" alt="GW high school image" />
+    /*. <img class="img4" src="GlenbardWest.jpg" alt="GW high school image" />  */
       <div class= "container4">
         <h4> Kelly Hass </h4>
         <p>  title, job </p>  
