Rob Nardini update

--- a/references.html
+++ b/references.html
@@ -30,7 +30,7 @@
     <div class= "thirdReference">
       <img class="img3" src="images/MAC-Building-Entrance.jpg" alt="MAC building image" />
       <div class= "container3">
-        <h4> Name 2 </h4>
+        <h4> Rob Nardini </h4>
         <p>  title, job </p>  
         <p class= "contact"> Contact Information: </p>
         <p> (630) 460 - 0067 <br> meixia2001@gmail.com </p> 
