Adding div tags

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <div class="gradient1"></div>
 
     <img src="images/Boston Map.jpg" alt="map" />
-    
+   
+ <div class= "paragraph1">
     <h3> About Me </h3>
     
     <p class="centeredp">Lorem ipsum dolor sit amet, mea no elitr consulatu. 
@@ -48,10 +49,14 @@
     imperdiet conclusionemque id pro, graeco salutatus liberavisse 
     at quo. Sit mutat dolor ex. Ut quando dolore pro, an sumo quaestio 
     scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
-    salutatus pri, et his ornatus tincidunt.</p>
-
-<h3> Life synompis</h3>
-<p>Lorem ipsum dolor sit amet, mea no elitr consulatu. 
+    salutatus pri, et his ornatus tincidunt.
+    </p>
+ </div>
+ 
+ <div class= "paragraph2">
+   <h3> Life synompis</h3>
+  
+   <p>Lorem ipsum dolor sit amet, mea no elitr consulatu. 
     Vis assentior voluptaria definitiones ut, mel lucilius 
     forensibus eu. Sit apeirian maiestatis at. Ex eripuit 
     molestiae vix. Ea omnesque conceptam mei. Cum laudem 
@@ -62,10 +67,14 @@
      imperdiet conclusionemque id pro, graeco salutatus liberavisse 
      at quo. Sit mutat dolor ex. Ut quando dolore pro, an sumo quaestio 
      scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
-     salutatus pri, et his ornatus tincidunt.</p>
-
-<h3> Passions</h3>
-<p>web design and evolution
+     salutatus pri, et his ornatus tincidunt.
+  </p>
+ </div>
+ 
+ <div class= "paragraph3">
+    <h3> Passions</h3>
+  
+    <p>web design and evolution
     Lorem ipsum dolor sit amet, mea no elitr consulatu. 
     Vis assentior voluptaria definitiones ut, mel lucilius 
     forensibus eu. Sit apeirian maiestatis at. Ex eripuit 
@@ -78,10 +87,13 @@
      at quo. Sit mutat dolor ex. Ut quando dolore pro, an sumo quaestio 
      scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
      salutatus pri, et his ornatus tincidunt.
-</p>
+    </p>
+ </div>
 
-<h3> Life synompis</h3>
-<p>talk about lanugaue back ground life summary
+ <div class= "paragraph4">
+    <h3> Life synompis</h3>
+  
+    <p> talk about lanugaue back ground life summary
     Lorem ipsum dolor sit amet, mea no elitr consulatu. 
     Vis assentior voluptaria definitiones ut, mel lucilius 
     forensibus eu. Sit apeirian maiestatis at. Ex eripuit 
@@ -94,7 +106,8 @@
      at quo. Sit mutat dolor ex. Ut quando dolore pro, an sumo quaestio 
      scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
      salutatus pri, et his ornatus tincidunt.
-</p>
+     </p>
+ </div>
 
 </body>
 </html>
