Adding header.php line

--- a/references.html
+++ b/references.html
@@ -8,6 +8,7 @@
   </header>
   
   <body>
+      <?php include "header.php"; ?>
       <h1> References </h1>
       <p> Please only contact if you are an interested employer, thank you. </p> 
     
