--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
     </div>
 
     <div class="gradient1"></div>
+ 
+ <div class= "mainContainer">
 
-    <img src="images/Boston Map.jpg" alt="map" />
+  <img src="images/Boston Map.jpg" alt="map" />
    
- <div class= "paragraph1">
+  <div class= "paragraph1">
     <h3> About Me </h3>
     
     <p class="centeredp">Lorem ipsum dolor sit amet, mea no elitr consulatu. 
@@ -51,12 +53,12 @@
     scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
     salutatus pri, et his ornatus tincidunt.
     </p>
- </div>
+  </div>
  
- <div class= "paragraph2">
-   <h3> Life synompis</h3>
+  <div class= "paragraph2">
+    <h3> Life synompis</h3>
   
-   <p>Lorem ipsum dolor sit amet, mea no elitr consulatu. 
+    <p>Lorem ipsum dolor sit amet, mea no elitr consulatu. 
     Vis assentior voluptaria definitiones ut, mel lucilius 
     forensibus eu. Sit apeirian maiestatis at. Ex eripuit 
     molestiae vix. Ea omnesque conceptam mei. Cum laudem 
@@ -68,10 +70,10 @@
      at quo. Sit mutat dolor ex. Ut quando dolore pro, an sumo quaestio 
      scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
      salutatus pri, et his ornatus tincidunt.
-  </p>
- </div>
+    </p>
+  </div>
  
- <div class= "paragraph3">
+  <div class= "paragraph3">
     <h3> Passions</h3>
   
     <p>web design and evolution
@@ -88,9 +90,9 @@
      scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
      salutatus pri, et his ornatus tincidunt.
     </p>
- </div>
+  </div>
 
- <div class= "paragraph4">
+  <div class= "paragraph4">
     <h3> Life synompis</h3>
   
     <p> talk about lanugaue back ground life summary
@@ -107,7 +109,7 @@
      scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
      salutatus pri, et his ornatus tincidunt.
      </p>
+  </div>
  </div>
-
 </body>
 </html>
