--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  
  <div class= "mainContainer">
 
-  <img src="images/Boston Map.jpg" alt="map" />
+  <img id= "bostonMap" src="images/Boston Map.jpg" alt="map" />
    
   <div class= "paragraph1">
     <h3> About Me </h3>
