added header div

--- a/references.html
+++ b/references.html
@@ -9,8 +9,10 @@
   
   <body>
       <?php include "header.php"; ?>
+    <div class= "header">
       <h1> References </h1>
       <p> Please only contact if you are an interested employer, thank you. </p> 
+    </div>
     
      <div class= "firstReference">
        <img class= "img1" src=" images/Vacant.jpg" alt= "joke image" />
