--- a/index.html
+++ b/index.html
@@ -41,18 +41,8 @@
   <div class= "paragraph1">
     <h3> About Me </h3>
     
-    <p class="centeredp">Lorem ipsum dolor sit amet, mea no elitr consulatu. 
-    Vis assentior voluptaria definitiones ut, mel lucilius 
-    forensibus eu. Sit apeirian maiestatis at. Ex eripuit 
-    molestiae vix. Ea omnesque conceptam mei. Cum laudem 
-    volutpat eu, id ius tota mollis aliquando. Sint persecuti 
-    sit in, sit at latine erroribus scribentur. Ut dicant integre 
-    maiestatis mel. Senserit expetenda duo ea. Eum et suas dictas,
-    insolens tractatos duo te. Te invenire instructior vel, 
-    imperdiet conclusionemque id pro, graeco salutatus liberavisse 
-    at quo. Sit mutat dolor ex. Ut quando dolore pro, an sumo quaestio 
-    scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
-    salutatus pri, et his ornatus tincidunt.
+    <p class="centeredp"> I am 21 year old student living in Boston. I orginally 
+     from Illinois 
     </p>
   </div>
  
@@ -103,15 +93,15 @@
      and biology classes in high school made me look at the natrual world with a 
      more critical eye. Instead of thinking an animal looked odd or bazzar, I 
      started to wonder why they looked the way they did and if it was the 
-     environment or its place in the food chain. As I got older this curisoity turned 
-     to why humans are the way we are and our evolutionary journey and its place 
+     environment or its place in the food chain. As I got older this curisoity 
+     turned to why humans are the way we are and our evolutionary journey and its place 
      in the current time period. As more information closly gets uncovered and piece of 
-     our past has been put together it really presents an intriguing story of where we came 
-     from as a speicies. Learning about this kind of science has really helped me put 
-     things into perspective and feel more connected with the world. I know these are 
-     quite __ statements but I think someone's passion/hobby should help people feel more 
-     present and connected to their spot in the world and for me, learning about "life's" 
-     past does that for me. 
+     our past has been put together it really presents an intriguing story of where we 
+     came from as a speicies. Learning about this kind of science has really helped me 
+     put things into perspective and feel more connected with the world. I know these 
+     are quite __ statements but I think someone's passion/hobby should help people 
+     feel more present and connected to their spot in the world and for me, learning 
+     about "life's" past does that for me. 
      
      On a lighter note, if you ever learn more about bugs they truly are the aliens 
      that roam along side us!
