--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h3> About Me </h3>
     
     <p class="centeredp"> I am 21 year old student living in Boston. I orginally 
-     from Illinois 
+     am from Illinois in the ChicagoLand area. 
     </p>
   </div>
  
@@ -73,10 +73,10 @@
      development/design and the second one being evolution. I will go into
      more detail as to what excatly makes those two very different interest 
      become my passion. 
-     <br>
+     <br> <br>
      I hope the layout and small details of this website (when finished) can 
      in part show that web development is something I am truly passionate about.
-     <br>
+     <br> <br>
      Both my grandmother and mother have been very artisitic and distilled it's 
      value in me when I was younger. At that time the more traditional way of
      creating art never appealed to me. It was almost a bit too open ended 
@@ -88,7 +88,7 @@
      more modern art form. Being in my early 20s this is an undienable plus since it 
      makes me feel like my work can be appercaited by my peers and has real utility 
      to it. 
-     <br>
+     <br> <br>
      The second passion of mine is less techinally driven interest. Taking ecology 
      and biology classes in high school made me look at the natrual world with a 
      more critical eye. Instead of thinking an animal looked odd or bazzar, I 
@@ -102,7 +102,7 @@
      are quite __ statements but I think someone's passion/hobby should help people 
      feel more present and connected to their spot in the world and for me, learning 
      about "life's" past does that for me. 
-     <br>
+     <br> <br>
      On a lighter note, if you ever learn more about bugs they truly are the aliens 
      that roam along side us!
     </p>
