--- a/index.html
+++ b/index.html
@@ -43,31 +43,26 @@
     
     <p class="centeredp"> I am 21 year old student living in Boston. I orginally 
      am from Illinois in the ChicagoLand area. 
+     - stuff that happened in the last year/ what I want to do in the future
     </p>
   </div>
  
   <div class= "paragraph2">
     <h3> Life synompis</h3>
   
-    <p>Lorem ipsum dolor sit amet, mea no elitr consulatu. 
-    Vis assentior voluptaria definitiones ut, mel lucilius 
-    forensibus eu. Sit apeirian maiestatis at. Ex eripuit 
-    molestiae vix. Ea omnesque conceptam mei. Cum laudem 
-    volutpat eu, id ius tota mollis aliquando. Sint persecuti 
-    sit in, sit at latine erroribus scribentur. Ut dicant integre 
-    maiestatis mel. Senserit expetenda duo ea. Eum et suas dictas,
-     insolens tractatos duo te. Te invenire instructior vel, 
-     imperdiet conclusionemque id pro, graeco salutatus liberavisse 
-     at quo. Sit mutat dolor ex. Ut quando dolore pro, an sumo quaestio 
-     scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
-     salutatus pri, et his ornatus tincidunt.
+    <p>
+     -only stuff past a year ago
+     -early life
+     -travel
+     -language
+     -activities I did 
+     -things that set up the stuff that has happened in the last year
     </p>
   </div>
 
   <div class= "paragraph4">
     <h3> Career Aspirations </h3>
-  
-    <p> talk about lanugaue back ground life summary
+    <p> 
      Lorem ipsum dolor sit amet, mea no elitr consulatu. 
     Vis assentior voluptaria definitiones ut, mel lucilius 
     forensibus eu. Sit apeirian maiestatis at. Ex eripuit 
