Adding more intro text

--- a/references.html
+++ b/references.html
@@ -11,7 +11,9 @@
       <?php include "header.php"; ?>
     <div class= "header">
       <h1> References </h1>
-      <p> Please only contact if you are an interested employer, thank you. </p> 
+      <p> Please only contact if you are an interested employer. <br>
+          If you wish to call them please contact me and I will give you their phone number. <br> 
+          Thank you for your understanding. </p> 
     </div>
     
      <div class= "firstReference">
