--- a/references.html
+++ b/references.html
@@ -17,7 +17,7 @@
     </div>
     
      <div class= "firstReference">
-       <img class= "img1" src=" id= "img1" images/Vacant.jpg" alt= "joke image" />
+       <img class= "img1" id= "img1" src= "images/Vacant.jpg" alt= "joke image" />
        <div class= "container1" onmouseover="oChange1('0.3')" onmouseout="oChange1('0.5')">
          <h4> Name 1 </h4>
          <p>  title, job </p>  
