Adding Info for References

--- a/references.html
+++ b/references.html
@@ -12,17 +12,18 @@
     <div class= "header">
       <h1> References </h1>
       <p> Please only contact if you are an interested employer. <br>
-          If you wish to call them please contact me and I will give you their phone number. <br> 
+          If you wish to call them please contact me and I will give you their number. <br> 
           Thank you for your understanding. </p> 
     </div>
     
      <div class= "firstReference">
        <img class= "img1" id= "img1" src= "images/Vacant.jpg" alt= "joke image" />
        <div class= "container1" onmouseover="oChange1('0.3')" onmouseout="oChange1('0.5')">
-         <h4> Name 1 </h4>
-         <p>  title, job </p>  
+         <h4> Name  </h4>
+         <p>  Job Title </p>  
+         <p> Company Name </p>
          <p class= "contact"> Contact Information: </p>
-         <p> (630) 460 - 0067 <br> meixia2001@gmail.com </p> 
+         <p> email <br> number </p> 
          <p> info <br> </p>
        </div>
     </div>
@@ -30,11 +31,11 @@
     <div class= "secondReference">
       <img class= "img2" id= "img2" src= "images/DuPageFoundation_Logo.png" alt= "DuPage Foundation image" />
       <div class= "container2" onmouseover="oChange2('0.3')" onmouseout="oChange2('0.5')">
-        <h4> Name 2 </h4>
-        <p>  title, job </p>  
+        <h4> Barbara Szczepaniak </h4>
+        <p>  Vice President for Programs </p>  
+        <p> DuPage Foundation </p>
         <p class= "contact"> Contact Information: </p>
-        <p> (630) 460 - 0067 <br> meixia2001@gmail.com </p> 
-        <p> info <br> </p>
+        <p> barb@dupagefoundation.org <br> 630.xxx.5280 </p> 
       </div> 
     </div>
     
@@ -42,9 +43,10 @@
       <img class= "img3" id= "img3" src= "images/MAC-Building-Entrance.jpg" alt= "MAC building image" />
       <div class= "container3" onmouseover="oChange3('0.3')" onmouseout="oChange3('0.5')"; >
         <h4> Rob Nardini </h4>
-        <p>  title, job </p>  
+        <p>  Front of House Manager/Volunteer Coordinator </p>  
+        <p> McAninch Arts Center </p>
         <p class= "contact"> Contact Information: </p>
-        <p> (630) 460 - 0067 <br> meixia2001@gmail.com </p> 
+        <p> nardinir@cod.edu <br> 630.xxx.2100 </p> 
         <p> info <br> </p>
       </div>
     </div>
@@ -53,9 +55,10 @@
       <img class= "img4" id= "img4" src= "images/GlenbardWest.jpg" alt= "GW high school image" />
       <div class= "container4" onmouseover="oChange4('0.3')" onmouseout="oChange4('0.5')">
         <h4> Kelly Hass </h4>
-        <p>  title, job </p>  
+        <p>  High School English Teacher </p>  
+        <p> </p>
         <p class= "contact"> Contact Information: </p>
-        <p> (630) 460 - 0067 <br> meixia2001@gmail.com </p> 
+        <p>  Kelly_hass@glenbard.org <br> 630.xxx.8600 </p> 
         <p> info <br> How she impacted me and why I have her as a reference <br> and more here <br> </p>
       </div>
     </div>
