--- a/references.html
+++ b/references.html
@@ -58,7 +58,7 @@
         <p>  High School English Teacher </p>  
         <p> </p>
         <p class= "contact"> Contact Information: </p>
-        <p>  Kelly_hass@glenbard.org <br> 630.xxx.8600 </p> 
+        <p>  kelly_hass@glenbard.org <br> 630.xxx.8600 </p> 
         <p> info <br> How she impacted me and why I have her as a reference <br> and more here <br> </p>
       </div>
     </div>
