--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,8 @@
 </head>
     
 <body style="background-image: url(images/crumpled-paper.jpg)"> 
-   <div class="navcontainer"> 
+    <div class="starterimage">
+        <div class="navcontainer"> 
             <!-- adding the top bar with contact information and other options. -->
             <div class="topbar">
                 <a href="index.html" id="home">Home</a>
@@ -19,7 +20,7 @@
                 <a href="mailto:meixia2001@gmail.com" id="email" title="click to send me an email"><i class="fa fa-envelope"></i></a>
                 <a href="tel:*6304600067" id="number" title="click to contact me"><i class="fa fa-phone"></i></a>
             </div>  
-    </div>
+        </div>
     <div>
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both computer science and business administration cources. <br>
