Adding Icon Link

--- a/references.html
+++ b/references.html
@@ -4,6 +4,8 @@
     <!-- connecting the css file to the html file -->
     <link rel="stylesheet" href="css/references.css">  
     
+    <!-- loading in the icon file -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title> Reference Page </title>
   </header>
   
