--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,9 @@
 <head>
 <!-- connecting the css file to the html file -->
 <link rel="stylesheet" href="css/resume.css"> 
+    
+<!-- loading in the icon file -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title> Resume Page </title>
 </head>
     
