--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   
   let stickyNavBar = function() {
    if (window.pageYOffset >= sticky) {
-    topbar.classList.add("sticky")
+    topbar.classList.add("sticky");
    } else {
     topbar.classList.remove("sticky");
    }
