--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   
   window.addEventListener("scroll", e => {
    let scrollPos = window.scrollY;
-   if(scroll > locY) {
+   if(scrollPos > locY) {
     topbar.classList.add("sticky"); 
    } else {
    topbar.classList.remove("sticky");
