--- a/references.html
+++ b/references.html
@@ -57,7 +57,7 @@
       <img class= "img3" id= "img3" src= "images/MAC-Building-Entrance.jpg" alt= "MAC building image" />
       <div class= "container3" onmouseover="oChange3('0.2')" onmouseout="oChange3('0.5')"; >
         <h4> Rob Nardini </h4>
-        <p>  Front of House Manager/Volunteer Coordinator </p>  
+        <p> Front of House Manager/Volunteer Coordinator </p>  
         <p> McAninch Arts Center </p>
         <p class= "contact"> Contact Information: </p>
         <p> nardinir@cod.edu <br> 630.xxx.2100 </p> 
@@ -69,8 +69,8 @@
       <img class= "img4" id= "img4" src= "images/GlenbardWest.jpg" alt= "GW high school image" />
       <div class= "container4" onmouseover="oChange4('0.2')" onmouseout="oChange4('0.5')">
         <h4> Kelly Hass </h4>
-        <p>  High School English Teacher </p>  
-        <p> </p>
+        <p> English Teacher </p>  
+        <p> Glenbard West High School </p>
         <p class= "contact"> Contact Information: </p>
         <p>  kelly_hass@glenbard.org <br> 630.xxx.8600 </p> 
         <p> info <br> How she impacted me and why I have her as a reference <br> and more here <br> </p>
