--- a/references.html
+++ b/references.html
@@ -34,7 +34,7 @@
        <img class= "img1" id= "img1" src= "images/Vacant.jpg" alt= "joke image" />
        <div class= "container1" onmouseover="oChange1('0.2')" onmouseout="oChange1('0.5')">
          <h4> Name  </h4>
-         <p>  Job Title </p>  
+         <p> Job Title </p>  
          <p> Company Name </p>
          <p class= "contact"> Contact Information: </p>
          <p> email <br> number </p> 
@@ -46,7 +46,7 @@
       <img class= "img2" id= "img2" src= "images/DuPageFoundation_Logo.png" alt= "DuPage Foundation image" />
       <div class= "container2" onmouseover="oChange2('0.2')" onmouseout="oChange2('0.5')">
         <h4> Barbara Szczepaniak </h4>
-        <p>  Vice President for Programs </p>  
+        <p> Vice President for Programs </p>  
         <p> DuPage Foundation </p>
         <p class= "contact"> Contact Information: </p>
         <p> barb@dupagefoundation.org <br> 630.xxx.5280 </p> 
@@ -72,8 +72,8 @@
         <p> English Teacher </p>  
         <p> Glenbard West High School </p>
         <p class= "contact"> Contact Information: </p>
-        <p>  kelly_hass@glenbard.org <br> 630.xxx.8600 </p> 
-        <p> info <br> How she impacted me and why I have her as a reference <br> and more here <br> </p>
+        <p> kelly_hass@glenbard.org <br> 630.xxx.8600 </p> 
+        <p> How she impacted me and why I have her as a reference <br> and more here <br> </p>
       </div>
     </div>
     
