--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="starterimage">
         <div class="navcontainer"> 
             <!-- adding the top bar with contact information and other options. -->
-            <div class="topbar">
+            <div class="topbar" id="topbar">
                 <a href="index.html" id="home">Home</a>
                 <a href="resume.html" id="resume">Resumes</a>
                 <a href="references.html" id="references">References</a>
