--- a/resume.html
+++ b/resume.html
@@ -33,8 +33,8 @@
         <!-- Setting up the 2x2 table for the resume and their respective titles -->
         <table>
             <tr>
-                <th class= "header1"> Computer Science </th> 
-                <th class= "header2"> Business Administration </th>
+                <th class= "header1" style="text-align: center"> Computer Science </th> 
+                <th class= "header2" style="text-align: center"> Business Administration </th>
             </tr>
             <tr>
                 <td> <img class= "resumeImage1" src="images/CS Resume.jpg" /> </td>
