--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
  </div>
  
  <script>
-  const topbar = document.getElementById("topbar");
+  const topbar = document.querySelector('#topbar');
   let top = topbar.offsetTop;
   
   function stickyTopbar() {
