--- a/references.html
+++ b/references.html
@@ -25,9 +25,8 @@
     </div>
     <div class= "header">
       <h1> References </h1>
-      <p> Please only contact if you are an interested employer. <br>
-          If you wish to call them please contact me and I will give you their number. <br> 
-          Thank you for your understanding. </p> 
+      <p> Please only contact if you are an interested employer. Please give notice if you wish to call any of my references. <br> 
+          Thank you for your understanding and cooperation. </p> 
     </div>
     
      <div class= "firstReference">
