--- a/references.html
+++ b/references.html
@@ -27,7 +27,7 @@
       <h1> References </h1>
       <p> Please only contact if you are an interested employer. Please give notice if you wish to call any of my references. <br> 
           Thank you for your understanding and cooperation. <br>
-          If you would like to veiw this information in a different format, please click <a href="link">here</a>. </p> 
+          <em> If you would like to veiw this information in a different format, please click <a href="link">here</a>. </em> </p> 
     </div>
     
      <div class= "firstReference">
