--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
  
  <div class= "mainContainer">
 
-  <img id= "bostonMap" src="images/Boston Map.jpg" alt="map" />
+ /*  <img id= "bostonMap" src="images/Boston Map.jpg" alt="map" /> */
    
   <div class= "paragraph1">
     <h3> About Me </h3>
