Fixing text for reference 4

--- a/references.html
+++ b/references.html
@@ -38,7 +38,7 @@
          <p> Company Name </p>
          <p class= "contact"> Contact Information: </p>
          <p> email <br> number </p> 
-         <p> info <br> </p>
+         <p> relation <br> </p>
        </div>
     </div>
     
@@ -74,8 +74,8 @@
         <p> Glenbard West High School </p>
         <p class= "contact"> Contact Information: </p>
         <p> kelly_hass@glenbard.org <br> 630.xxx.8600 </p> 
-        <p> She was my english teacher my sophmore year and helped me gain confident in my writing abilities.
-          <br> I have her as one of my references as being pushed to take an AP english class taught me to pursue lofty goals. </p>
+        <p> Kelly was my english teacher and helped me gain confidence in my writing abilities.
+          <br> She is one of my references as being pushed to take an AP english class taught me to pursue lofty goals. </p>
       </div>
     </div>
     
