--- a/references.html
+++ b/references.html
@@ -75,7 +75,7 @@
         <p class= "contact"> Contact Information: </p>
         <p> kelly_hass@glenbard.org <br> 630.xxx.8600 </p> 
         <p> Kelly was my english teacher and helped me gain confidence in my writing abilities.
-          <br> She is one of my references as being pushed to take an AP english class taught me to pursue lofty goals. </p>
+          <br> She pushed me to take an AP english class which taught me to pursue more lofty goals. </p>
       </div>
     </div>
     
